syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
package coresamples_service;

option go_package = "./proto;coresamples_service";

service ContactService{
  rpc UpdateContact (UpdateContactRequest) returns (Contact){}
  rpc CreateContact (CreateContactRequest) returns (Contact){}
  rpc UpdateGroupContact(UpdateGroupContactRequest) returns(CreateOrUpdateGroupContactResponse){}
  rpc CreateOrUpdateGroupContact(CreateOrUpdateGroupContactRequest) returns(CreateOrUpdateGroupContactResponse){}
  rpc ShowCustomerContact(ShowCustomerContactRequest) returns(ShowCustomerContactResponse){}
  rpc ShowClinicContact(ShowClinicContactRequest) returns(ShowCustomerContactResponse){}
  rpc DeleteContact(DeleteContactRequest) returns(DeleteContactResponse){}
}

message DeleteContactRequest{
  int32 contact_id = 1;
}

message DeleteContactResponse{
  int32 code = 1;
  string message = 2;
}

message ShowClinicContactRequest{
  int32 clinic_id = 1;
}

message ShowCustomerContactRequest{
  int32 customer_id = 1;
}

message ShowCustomerContactResponse{
  repeated CustomerContact result = 1;
}

message CustomerContact{
  int32 contact_id = 1;
  string contact_description = 2;
  string contact_details = 3;
  string contact_type = 4;
  bool is_primary_contact = 5;
  bool hasGroupContact = 6;
  bool isGroupContact = 7;
  int32 contact_level = 8;
  string contact_level_name = 9;
  int32 group_contact_id = 10;
  bool applyToAllGroupMember = 11;
  bool useAsDefaultCreateContact = 12;
  int32 customer_id = 13;
  int32 patient_id = 14;
  int32 clinic_id = 15;
  int32 internal_user_id = 16;
  CustomerContact group_contact = 17;
  bool useGroupContact = 18;
}

message CreateOrUpdateGroupContactResponse{
  int32 contact_id = 1;
  string contact_description = 2;
  string contact_details = 3;
  string contact_type = 4;
  bool is_primary_contact = 5;
  bool hasGroupContact = 6;
  bool isGroupContact = 7;
  int32 contact_level = 8;
  string contact_level_name = 9;
  int32 group_contact_id = 10;
  repeated CreateOrUpdateGroupContactResponse member_contacts = 11;
  bool applyToAllGroupMember = 12;
  bool useAsDefaultCreateContact = 13;
  int32 customer_id = 14;
  int32 patient_id = 15;
  int32 clinic_id = 16;
  int32 internal_user_id = 17;
}

message CreateOrUpdateGroupContactRequest{
  string contact_description = 1;
  string contact_details = 2;
  string contact_type = 3;
  bool is_primary_contact = 4;
  bool hasGroupContact = 5;
  bool isGroupContact = 6;
  int32 contact_level = 7;
  string contact_level_name = 8;
  int32 group_contact_id = 9;
  bool applyToAllGroupMember = 10;
  bool useAsDefaultCreateContact = 11;
  int32 clinic_id = 12;
}

message UpdateGroupContactRequest{
  string contact_description = 1;
  string contact_details = 2;
  string contact_type = 3;
  bool is_primary_contact = 4;
  bool hasGroupContact = 5;
  bool isGroupContact = 6;
  int32 contact_level = 7;
  string contact_level_name = 8;
  int32 group_contact_id = 9;
  bool applyToAllGroupMember = 10;
  bool useAsDefaultCreateContact = 11;
  int32 clinic_id = 12;
  int32 contact_id = 13;
}


message Contact{
  int32 contact_id = 1;
  string contact_description = 2;
  string contact_details = 3;
  string contact_type = 4;
  bool is_primary_contact = 5;
  int32 customer_id = 6;
  int32 patient_id = 7;
  int32 clinic_id = 8;
}

message UpdateContactRequest{
  string contact_id = 1;
  string contact_description = 2;
  string contact_details = 3;
  string contact_type = 4;
  bool is_primary_contact = 5;
  bool useGroupContact = 6;
}

message CreateContactRequest{
  string contact_description = 1;
  string contact_details = 2;
  string contact_type = 3;
  bool is_primary_contact = 4;
  int32 internal_user_id = 5;
  int32 customer_id = 6;
  int32 patient_id = 7;
  int32 clinic_id = 8;
}